--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
-            <a class="navbar-brand" href="#">Brad</a>
+            <a class="navbar-brand" href="#home">Sambath</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -112,7 +112,7 @@
                         <img class="card-img-top" src="images/blog.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">My blog</h4>
-                            <p class="card-text">Use can post activiy daily and find particul blog and update it.</p>
+                            <p class="card-text">User can post activiy daily and find particul blog and update it.</p>
                             <div class="text-center">
                                 <a href="https://github.com/Sambath77/my-bog" class="btn btn-success">Link</a>
                             </div>
